--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       with:
           ref: ${{ github.ref }}
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34
       with:
         go-version: '1.23'
     - name: Build
@@ -24,7 +24,7 @@ jobs:
       run: go test -race --coverprofile=coverage.txt --covermode=atomic ./...
     - name: Upload coverage to Codecov
       if: success() && github.ref == 'refs/heads/main'
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@0565863a31f2c772f9f0395002a31e3f06189574
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: false
